--- a/frontend/src/app/accueil/accueil.component.css
+++ b/frontend/src/app/accueil/accueil.component.css
@@ -20,9 +20,9 @@ mat-form-field {
 .onglet a {
   text-decoration: none;
   color: #693B2D;
+  background-color: white;
   border-radius: 5px;
   font-weight: bold;
-  background-color: #E3C49F;
   border: 5px dashed black;
   margin: 10px;
   padding: 10px;
