--- a/frontend/src/app/popup-modify-event/popup-modify-event.component.html
+++ b/frontend/src/app/popup-modify-event/popup-modify-event.component.html
@@ -1,1 +1,21 @@
-<p>popup-modify-event works!</p>
+<div class="container">
+    <div class="header">
+        <button mat-raised-button color="primary" (click)="logout()" class="btn btn-primary">Déconnexion</button>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <button mat-raised-button color="primary" routerLink="/accueil" class="home-button" >Accueil</button>
+                </li>
+                <li class="nav-item">
+                    <button mat-raised-button color="primary" routerLink="/add-event" class="home-button">Ajouter données</button>
+                </li>
+                <li class="nav-item">
+                    <button mat-raised-button color="primary" routerLink="/modify-event" class="home-button" style="color:red;">Modifier données</button>
+                </li>
+                <li class="nav-item">
+                    <button mat-raised-button color="primary" routerLink="/delete-event" class="home-button" >Supprimer données</button>
+                </li><br>
+            </ul>     
+    </div>
+
+
+    <h1 mat-dialog-title>Modifier un évènement</h1>
