--- a/frontend/src/app/popup-add-event/popup-add-event.component.html
+++ b/frontend/src/app/popup-add-event/popup-add-event.component.html
@@ -17,8 +17,9 @@
             </ul>     
     </div>
     <h1 mat-dialog-title >Ajouter un évènement</h1>
-    <div mat-dialog-content class="mat-dialog-content">
         <form [formGroup]="formData" (ngSubmit)="submitData()">
+
+    <div mat-dialog-content class="mat-dialog-content">
             <!-- Affichez les catégories -->
             <div class="categories">
              <label>Sélectionnez la catégorie à modifier :</label>
@@ -32,14 +33,14 @@
             <label>Sélectionnez les champs à modifier :</label>
             <!-- Affichez les colonnes de la catégorie sélectionnée --> 
                 <div *ngFor="let column of selectedCategoriesColumns">
-                    <label>{{ column }}</label>
+                    <label>{{ column }} : </label>
                     <input type="text" [value]="formData.get(column)?.value" (input)="onInput($event, column)">
                 </div>
             </div>
-            <button type="button" mat-button mat-dialog-close color="primary" (click)="submitData()">Soumettre Ajout</button>
-    
+           
+        </div>
         </form>
-    </div>
+ <button type="button" mat-button mat-dialog-close color="primary" (click)="submitData()">Soumettre Ajout</button>
     <div mat-dialog-actions>
         <!-- Réutilisez le bouton si nécessaire -->
         
