--- a/frontend/src/app/accueil/accueil.component.html
+++ b/frontend/src/app/accueil/accueil.component.html
@@ -4,7 +4,7 @@
 <div id="top">
     <button mat-raised-button color="primary" (click)="logout()" class="home-button">Déconnexion</button>
     <button mat-raised-button color="primary" routerLink="/friseparam1" class="home-button">Générer frise chronologique</button>
-    <button mat-raised-button color="primary" routerLink="/submission" class="home-button">Gérer les soumissions</button>
+    <button mat-raised-button color="primary" routerLink="/submission" class="home-button">Administration</button>
 </div>
 <div class="onglet">
     <div>
