--- a/frontend/src/app/pagefriseparam2/pagefriseparam2.component.html
+++ b/frontend/src/app/pagefriseparam2/pagefriseparam2.component.html
@@ -10,7 +10,7 @@
             <mat-radio-button name="blue" type="radio" value="#0000FF" (change)="toggleSelectionOff()"> Bleu</mat-radio-button>
             <mat-radio-button name="red " type="radio" value="#FF0000" (change)="toggleSelectionOff()"> Rouge</mat-radio-button>
             <mat-radio-button name="green" type="radio" value="#008000" (change)="toggleSelectionOff()"> Vert</mat-radio-button>
-            <mat-radio-button name="black " type="radio" value="#000000" (change)="toggleSelectionOff()"> Noir</mat-radio-button>
+            <mat-radio-button name="yellow " type="radio" value="#FFFF00" (change)="toggleSelectionOff()"> Jaune</mat-radio-button>
             <mat-radio-button name="perso" type="radio" value="personnalise" (change)="toggleSelection()"> Personnalisé</mat-radio-button>
         </mat-radio-group>
 
