--- a/frontend/src/app/popup-style/popup-style.component.html
+++ b/frontend/src/app/popup-style/popup-style.component.html
@@ -1,10 +1,10 @@
-<h1 mat-dialog-title>Change Date</h1>
+<h1 mat-dialog-title>Change Style</h1>
 <div mat-dialog-content>
     <mat-radio-group [(ngModel)]="color">
         <mat-radio-button name="blue" type="radio" name="couleur" value="#0000FF" (change)="toggleSelectionOff()"> Bleu</mat-radio-button>
         <mat-radio-button name=" red " type="radio " name="couleur " value="#FF0000 " (change)="toggleSelectionOff()"> Rouge</mat-radio-button>
         <mat-radio-button name="green" type="radio" name="couleur" value="#008000" (change)="toggleSelectionOff()"> Vert</mat-radio-button>
-        <mat-radio-button name=" black " type="radio " name="couleur " value="#000000 " (change)="toggleSelectionOff()"> Noir</mat-radio-button>
+        <mat-radio-button name=" yellow " type="radio " name="couleur " value="#FFFF00 " (change)="toggleSelectionOff()"> Yellow</mat-radio-button>
         <mat-radio-button name="perso" type="radio" name="couleur" value="personnalise" (change)="toggleSelection()"> Personnalisé</mat-radio-button>
     </mat-radio-group>
 
