--- a/frontend/src/app/page-frise/page-frise.component.css
+++ b/frontend/src/app/page-frise/page-frise.component.css
@@ -63,3 +63,8 @@ button {
 mat-form-field {
     width: 100px;
 }
+
+.frise-container {
+    width: 100%;
+    margin-top: 20px; /* Ajustez selon vos besoins */
+  }
