--- a/frontend/src/app/popup-style/popup-style.component.html
+++ b/frontend/src/app/popup-style/popup-style.component.html
@@ -1,16 +1,12 @@
 <h1 mat-dialog-title>Change Style</h1>
 <div mat-dialog-content>
     <mat-radio-group [(ngModel)]="color">
-        <mat-radio-button name="blue" type="radio" name="couleur" value="#0000FF" (change)="toggleSelectionOff()"> Bleu</mat-radio-button>
-        <mat-radio-button name=" red " type="radio " name="couleur " value="#FF0000 " (change)="toggleSelectionOff()"> Rouge</mat-radio-button>
-        <mat-radio-button name="green" type="radio" name="couleur" value="#008000" (change)="toggleSelectionOff()"> Vert</mat-radio-button>
-        <mat-radio-button name=" yellow " type="radio " name="couleur " value="#FFFF00 " (change)="toggleSelectionOff()"> Yellow</mat-radio-button>
-        <mat-radio-button name="perso" type="radio" name="couleur" value="personnalise" (change)="toggleSelection()"> Personnalisé</mat-radio-button>
+        <mat-radio-button name="blue" type="radio" name="couleur" value="#0000FF"> Bleu</mat-radio-button>
+        <mat-radio-button name=" red " type="radio " name="couleur " value="#FF0000 "> Rouge</mat-radio-button>
+        <mat-radio-button name="green" type="radio" name="couleur" value="#008000"> Vert</mat-radio-button>
+        <mat-radio-button name=" yellow " type="radio " name="couleur " value="#FFFF00 "> Jaune</mat-radio-button>
     </mat-radio-group>
 
-    <div id="couleur-personnalise" *ngIf="selectionPersonnalisee" class="couleur-personnalise-container">
-        <input type="color" name="couleur-personnalise" [(ngModel)]="colorPerso" class="couleur-personnalise-input">
-    </div>
 </div>
 <div mat-dialog-actions>
     <button mat-button mat-dialog-close color="primary" (click)="emitData()">Enregistrer</button>
