--- a/frontend/src/app/accueil/accueil.component.html
+++ b/frontend/src/app/accueil/accueil.component.html
@@ -7,7 +7,7 @@
 
     <button mat-raised-button color="primary" class="home-button">{{userStatus}}</button>
     <button *ngIf="userStatus === 'admin'" mat-raised-button color="primary" routerLink="/submission" class="home-button">Administration</button>
-    <button mat-raised-button color="primary" routerLink="/suggestion" class="home-button"> Suggestion</button>
+    <button *ngIf="userStatus === 'user'"mat-raised-button color="primary" routerLink="/suggestion" class="home-button"> Suggestion</button>
 </div>
 <div class="onglet">
     <div>
