--- a/frontend/src/app/popup-cat/popup-cat.component.html
+++ b/frontend/src/app/popup-cat/popup-cat.component.html
@@ -1,14 +1,28 @@
 <h1 mat-dialog-title>Change Categorie</h1>
 <div mat-dialog-content>
-    <form #form="ngForm">
-        <div class="checkbox-wrapper">
-            <div *ngFor="let category of categories" class="category">
-                <mat-checkbox [(ngModel)]="category.selected" [ngModelOptions]="{standalone: true}">{{ category.name }}</mat-checkbox>
-            </div>
+  <form [formGroup]="formData" (ngSubmit)="submitData()">
+        <div mat-dialog-content class="mat-dialog-content">
+        <!-- Sélection de la catégorie -->
+        <div class="categories">
+          <label>Sélectionnez la catégorie à modifier :</label>
+          <div *ngFor="let category of categories">
+            <input type="radio" name="category" [value]="category.id" (change)="onCategoryChange(category.id)" [checked]="category.selected">
+            {{ category.name }}
+          </div>
         </div>
+          <div class="events">
+            <label>Sélectionnez l'événement à modifier :</label>
+            <div *ngIf="selectedCategories.length > 0">
+              <div *ngFor="let event of dates">
+                <input type="radio" name="selectedEvent" [value]="event.id" (change)="onEventChange(event.id)" [checked]="event.selected">
+                {{ event.nom }} - {{ event.date }}
+              </div>
+            </div>
+          </div>
+          </div>
     </form>
 </div>
 <div mat-dialog-actions>
-    <button mat-button mat-dialog-close color="primary" (click)="emitData()">Enregistrer</button>
+    <button type="submit" mat-button mat-dialog-close color="primary">Enregistrer</button>
     <button mat-button mat-dialog-close>Annuler</button>
 </div>
