--- a/frontend/src/app/accueil/accueil.component.html
+++ b/frontend/src/app/accueil/accueil.component.html
@@ -5,8 +5,8 @@
     <button mat-raised-button color="primary" (click)="logout()" class="home-button">Déconnexion</button>
     <button mat-raised-button color="primary" routerLink="/friseparam1" class="home-button">Générer frise chronologique</button>
 
-    <button mat-raised-button color="primary" class="home-button">{{userStatus}}</button>
-    <button *ngIf="userStatus === 'admin'" mat-raised-button color="primary" routerLink="/submission" class="home-button">Administration</button>
+     <!--  <button mat-raised-button color="primary" class="home-button">{{userStatus}}</button>--->
+ <button *ngIf="userStatus === 'admin'" mat-raised-button color="primary" routerLink="/submission" class="home-button">Administration</button>
     <button *ngIf="userStatus === 'user'"mat-raised-button color="primary" routerLink="/suggestion" class="home-button"> Suggestion</button>
 </div>
 <div class="onglet">
