--- a/frontend/src/app/popup-cat/popup-cat.component.html
+++ b/frontend/src/app/popup-cat/popup-cat.component.html
@@ -1,28 +1,27 @@
 <h1 mat-dialog-title>Change Categorie</h1>
 <div mat-dialog-content>
-  <form [formGroup]="formData" (ngSubmit)="submitData()">
-        <div mat-dialog-content class="mat-dialog-content">
-        <!-- Sélection de la catégorie -->
-        <div class="categories">
-          <label>Sélectionnez la catégorie à modifier :</label>
-          <div *ngFor="let category of categories">
-            <input type="radio" name="category" [value]="category.id" (change)="onCategoryChange(category.id)" [checked]="category.selected">
-            {{ category.name }}
-          </div>
+  <form [formGroup]="formData" (ngModel)="emitData()">
+    <div mat-dialog-content class="mat-dialog-content">
+      <!-- Sélection de la catégorie -->
+      <div class="categories">
+        <label>Sélectionnez la catégorie à modifier :</label>
+        <div *ngFor="let category of categories">
+          <input type="radio" name="category" [value]="category.id" (change)="onCategoryChange(category.id)" [checked]="category.selected">
+          {{ category.name }}
         </div>
-          <div class="events">
-            <label>Sélectionnez l'événement à modifier :</label>
-            <div *ngIf="selectedCategories.length > 0">
-              <div *ngFor="let event of dates">
-                <input type="radio" name="selectedEvent" [value]="event.id" (change)="onEventChange(event.id)" [checked]="event.selected">
-                {{ event.nom }} - {{ event.date }}
-              </div>
-            </div>
-          </div>
-          </div>
-    </form>
+      </div>
+
+      <!-- Sélection des événements avec des cases à cocher -->
+      <div class="events">
+        <label>Sélectionnez les événements à inclure :</label>
+        <div *ngFor="let date of dates">
+          <mat-checkbox [(ngModel)]="date.selected" (change)="onEventChange(date.id)">{{ date.nom }}</mat-checkbox>
+        </div>
+      </div>
+    </div>
+  </form>
 </div>
 <div mat-dialog-actions>
-    <button type="submit" mat-button mat-dialog-close color="primary">Enregistrer</button>
-    <button mat-button mat-dialog-close>Annuler</button>
+  <button type="submit" mat-button mat-dialog-close color="primary">Enregistrer</button>
+  <button mat-button mat-dialog-close>Annuler</button>
 </div>
