--- a/frontend/src/app/popup-cat/popup-cat.component.html
+++ b/frontend/src/app/popup-cat/popup-cat.component.html
@@ -1,27 +1,25 @@
 <h1 mat-dialog-title>Change Categorie</h1>
 <div mat-dialog-content>
-  <form [formGroup]="formData" (ngModel)="emitData()">
-    <div mat-dialog-content class="mat-dialog-content">
-      <!-- Sélection de la catégorie -->
-      <div class="categories">
-        <label>Sélectionnez la catégorie à modifier :</label>
-        <div *ngFor="let category of categories">
-          <input type="radio" name="category" [value]="category.id" (change)="onCategoryChange(category.id)" [checked]="category.selected">
-          {{ category.name }}
-        </div>
-      </div>
-
-      <!-- Sélection des événements avec des cases à cocher -->
-      <div class="events">
-        <label>Sélectionnez les événements à inclure :</label>
-        <div *ngFor="let date of dates">
-          <mat-checkbox [(ngModel)]="date.selected" (change)="onEventChange(date.id)">{{ date.nom }}</mat-checkbox>
-        </div>
-      </div>
+  <form #form="ngForm">
+    <h2 class="subtitle">Sélectionner une catégorie :</h2>
+    <div class="category-dropdown">
+      <mat-form-field appearance="fill">
+        <mat-select [(ngModel)]="selectedCategories" name="selectedCategories" (selectionChange)="loadDates()">
+          <mat-option *ngFor="let category of categories" [value]="category.name">{{ category.name }}</mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
+    <h2 class="subtitle">Sélectionner des dates :</h2>
+    <div class="category-dropdown">
+      <mat-form-field appearance="fill">
+        <mat-select [(ngModel)]="selectedDates" name="selectedDates" multiple>
+          <mat-option *ngFor="let date of dates" [value]="date.id"> {{ date.nom }} </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  
   </form>
 </div>
-<div mat-dialog-actions>
-  <button type="submit" mat-button mat-dialog-close color="primary">Enregistrer</button>
-  <button mat-button mat-dialog-close>Annuler</button>
-</div>
+<mat-card-actions>
+  <button mat-raised-button color="primary" class="button" (click)="emitData()">Suivant</button>
+</mat-card-actions>
